update sprites graphic

--- a/playground/styles.css
+++ b/playground/styles.css
@@ -2,3 +2,12 @@ body {
   background-color: #161e21;
   margin: 0px;
 }
+
+canvas {
+  image-rendering: optimizeSpeed;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: optimize-contrast;
+  image-rendering: pixelated;
+  -ms-interpolation-mode: nearest-neighbor;
+}
