Create User Inputs Components (#16)
* implement keyboard proxy

* update readme with keyboard

* remove flow annotation

* creat raf utilities

* implement ScreenButton class

* add gui button

* rename tiled types file

* handle mousedown and mouseup events

* move gui to a separate file

* fix offset bug in followMouse

* update readme with ScreenButton

--- a/playground/styles.css
+++ b/playground/styles.css
@@ -11,3 +11,17 @@ canvas {
   image-rendering: pixelated;
   -ms-interpolation-mode: nearest-neighbor;
 }
+
+.button {
+  position: absolute;
+  left: 32px;
+  bottom: 32px;
+  width: 64px;
+  height: 64px;
+  background-image: url('./assets/gui.png');
+  cursor: pointer;
+}
+
+.button--clicked {
+  background-position: 0 -64px;
+}
